--- a/appview/pages/templates/repo/pulls/patch.html
+++ b/appview/pages/templates/repo/pulls/patch.html
@@ -1,22 +1,21 @@
 {{ define "title" }}
-    viewing patch of {{ .Pull.Title }} &middot; pull #{{ .Pull.PullId }} &middot; {{ .RepoInfo.FullName }}
+    {{ $oneIndexedRound := add .Round 1 }}
+    patch of {{ .Pull.Title }} &middot; round #{{ $oneIndexedRound }} &middot; pull #{{ .Pull.PullId }} &middot; {{ .RepoInfo.FullName }}
 {{ end }}
 
 {{ define "content" }}
   {{ $oneIndexedRound := add .Round 1 }}
   {{ $stat := .Diff.Stat }}
-    <div class="flex gap-2 items-center text-gray-500 mb-2 px-6">
-        <a href="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/" class="flex items-center gap-2">
-          <i data-lucide="arrow-left" class="w-4 h-4"></i>
-          back
-        </a>
-        <span class="select-none before:content-['·']"></span>
-        viewing round 
-        <span class="text-black">#{{ $oneIndexedRound }}</span>
-    </div>
     <div class="rounded drop-shadow-sm bg-white py-4 px-6">
-      <header class="pb-4">
-          <h1 class="text-2xl">
+      <header class="pb-2">
+          <div class="flex gap-3 items-center mb-3">
+              <a href="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/" class="flex items-center gap-2 font-medium">
+                <i data-lucide="arrow-left" class="w-5 h-5"></i>
+              </a>
+              <h2 class="text-lg">round <span class="font-medium">#{{ $oneIndexedRound }}</span></h2>
+          </div>
+          <div class="border-t border-gray-200 my-2"></div>
+          <h1 class="text-2xl mt-3">
               {{ .Pull.Title }}
               <span class="text-gray-500">#{{ .Pull.PullId }}</span>
           </h1>
@@ -83,8 +82,8 @@
         {{ end }}
       </div>
   </div>
+
   <section>
     {{ template "fragments/diff" (list .RepoInfo.FullName .Diff) }}
   </section>
 {{ end }}
-
