--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -9,13 +9,13 @@
                 onchange="window.location.href = '/{{ .RepoInfo.FullName }}/pulls?state=' + this.value"
             >
                 <option value="open" {{ if .FilteringBy.IsOpen }}selected{{ end }}>
-                    open
+                    open ({{ .RepoInfo.Stats.PullCount.Open }})
                 </option>
                 <option value="merged" {{ if .FilteringBy.IsMerged }}selected{{ end }}>
-                    merged
+                    merged ({{ .RepoInfo.Stats.PullCount.Merged }})
                 </option>
                 <option value="closed" {{ if .FilteringBy.IsClosed }}selected{{ end }}>
-                    closed
+                    closed ({{ .RepoInfo.Stats.PullCount.Closed }})
                 </option>
             </select>
             pull requests
@@ -32,7 +32,7 @@
 {{ end }}
 
 {{ define "repoAfter" }}
-    <div class="flex flex-col gap-2 mt-8">
+    <div class="flex flex-col gap-2 mt-2">
         {{ range .Pulls }}
             <div class="rounded drop-shadow-sm bg-white px-6 py-4">
                 <div class="pb-2">
