--- a/appview/pages/templates/timeline.html
+++ b/appview/pages/templates/timeline.html
@@ -43,7 +43,7 @@
         {{ $userHandle :=  index $.DidHandleMap .Repo.Did }}
         <div class="flex items-center">
           <p class="text-gray-600">
-          <a href="/{{ $userHandle }}" class="no-underline hover:underline">{{ $userHandle }}</a>
+          <a href="/{{ $userHandle }}" class="no-underline hover:underline">{{ $userHandle | truncateAt30 }}</a>
           created
           <a href="/{{ $userHandle }}/{{ .Repo.Name }}" class="no-underline hover:underline">{{ .Repo.Name }}</a>
           <time class="text-gray-700 text-xs">{{ .Repo.Created | timeFmt }}</time>
@@ -54,9 +54,9 @@
         {{ $subjectHandle :=  index $.DidHandleMap .Follow.SubjectDid }}
         <div class="flex items-center">
           <p class="text-gray-600">
-          <a href="/{{ $userHandle }}" class="no-underline hover:underline">{{ $userHandle }}</a>
+          <a href="/{{ $userHandle }}" class="no-underline hover:underline">{{ $userHandle | truncateAt30 }}</a>
           followed
-          <a href="/{{ $subjectHandle }}" class="no-underline hover:underline">{{ $subjectHandle }}</a>
+          <a href="/{{ $subjectHandle }}" class="no-underline hover:underline">{{ $subjectHandle | truncateAt30 }}</a>
           <time class="text-gray-700 text-xs">{{ .Follow.FollowedAt | timeFmt }}</time>
           </p>
         </div>
@@ -65,9 +65,9 @@
         {{ $repoOwnerHandle :=  index $.DidHandleMap .Star.Repo.Did }}
         <div class="flex items-center">
           <p class="text-gray-600">
-          <a href="/{{ $starrerHandle }}" class="no-underline hover:underline">{{ $starrerHandle }}</a>
+          <a href="/{{ $starrerHandle }}" class="no-underline hover:underline">{{ $starrerHandle | truncateAt30 }}</a>
           starred
-          <a href="/{{ $repoOwnerHandle }}/{{ .Star.Repo.Name }}" class="no-underline hover:underline">{{ $repoOwnerHandle }}/{{ .Star.Repo.Name }}</a>
+          <a href="/{{ $repoOwnerHandle }}/{{ .Star.Repo.Name }}" class="no-underline hover:underline">{{ $repoOwnerHandle | truncateAt30 }}/{{ .Star.Repo.Name }}</a>
           <time class="text-gray-700 text-xs">{{ .Star.Created | timeFmt }}</time>
           </p>
         </div>
