--- a/appview/pages/templates/fragments/repoDescription.html
+++ b/appview/pages/templates/fragments/repoDescription.html
@@ -1,5 +1,5 @@
 {{ define "fragments/repoDescription" }}
-<span id="repo-description" hx-target="this" hx-swap="outerHTML">
+<span id="repo-description" class="flex flex-wrap items-center gap-2" hx-target="this" hx-swap="outerHTML">
     {{ if .RepoInfo.Description }}
         {{ .RepoInfo.Description }}
     {{ else }}
@@ -7,8 +7,9 @@
     {{ end }}
 
     {{ if .RepoInfo.Roles.IsOwner }}
-    <button class="bg-gray-200 uppercase rounded p-1 ml-1 hover:bg-gray-400 font-mono text-sm" hx-get="/{{ .RepoInfo.FullName }}/description/edit">
+    <button class="btn p-2 flex items-center gap-2 no-underline text-sm" hx-get="/{{ .RepoInfo.FullName }}/description/edit">
       edit
+      {{ i "pencil" "w-3 h-3" }}
     </button>
     {{ end }}
 </span>
