--- a/appview/pages/templates/fragments/star.html
+++ b/appview/pages/templates/fragments/star.html
@@ -15,19 +15,14 @@
     >
     <div class="flex gap-2 items-center">
       {{ if .IsStarred }}
-      <span class="w-3 h-3 fill-current" data-lucide="star"></span>
+      {{ i "star" "w-3 h-3 fill-current" }}
       {{ else }}
-      <span class="w-3 h-3" data-lucide="star"></span>
+      {{ i "star" "w-3 h-3" }}
       {{ end }}
       <span>
         {{ .Stats.StarCount }}
       </span>
     </div>
   </button>
-  <script>
-    document.body.addEventListener('htmx:afterRequest', function (evt) {
-      lucide.createIcons();
-    });
-  </script>
 {{ end }}
 
