--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -27,10 +27,7 @@
                 id="state"
                 class="inline-flex items-center rounded px-3 py-1 {{ $bgColor }}"
             >
-                <i
-                    data-lucide="{{ $icon }}"
-                    class="w-4 h-4 mr-1.5 text-white"
-                ></i>
+                {{ i $icon "w-4 h-4 mr-1.5 text-white" }}
                 <span class="text-white">{{ .Pull.State.String }}</span>
             </div>
             <span class="text-gray-500 text-sm">
@@ -139,7 +136,7 @@
   <div class="bg-purple-50 border border-purple-500 rounded drop-shadow-sm px-6 py-2 relative w-fit">
     <div class="absolute left-8 -top-2 w-px h-2 bg-gray-300"></div>
     <div class="flex items-center gap-2 text-purple-500">
-      <i data-lucide="git-merge" class="w-4 h-4"></i>
+      {{ i "git-merge" "w-4 h-4" }}
       <span class="font-medium">pull request successfully merged</span
       >
     </div>
@@ -148,16 +145,13 @@
     <div class="bg-red-50 border border-red-500 rounded drop-shadow-sm px-6 py-2 relative w-fit">
       <div class="absolute left-8 -top-2 w-px h-2 bg-gray-300"></div>
       <div class="flex items-center gap-2 text-red-500">
-        <i data-lucide="alert-triangle" class="w-4 h-4"></i>
+        {{ i "triangle-alert" "w-4 h-4" }}
         <span class="font-medium">merge conflicts detected</span>
         <ul class="text-sm space-y-1">
           {{ range .MergeCheck.Conflicts }}
             {{ if .Filename }}
             <li class="flex items-center">
-              <i
-                  data-lucide="file-warning"
-                  class="w-3 h-3 mr-1.5 text-red-500"
-                  ></i>
+              {{ i "file-warning" "w-3 h-3 mr-1.5 text-red-500" }}
               <span class="font-mono">{{ slice .Filename 0 (sub (len .Filename) 2) }}</span>
             </li>
             {{ end }}
@@ -169,7 +163,7 @@
   <div class="bg-green-50 border border-green-500 rounded drop-shadow-sm px-6 py-2 relative w-fit">
     <div class="absolute left-8 -top-2 w-px h-2 bg-gray-300"></div>
     <div class="flex items-center gap-2 text-green-500">
-      <i data-lucide="check-circle" class="w-4 h-4"></i>
+      {{ i "circle-check-big" "w-4 h-4" }}
       <span class="font-medium">no conflicts, ready to merge</span>
     </div>
   </div>
@@ -191,7 +185,7 @@
       <div class="absolute left-8 -top-2 w-px h-2 bg-gray-300"></div>
       <div class="flex flex-wrap gap-2">
           <button href="#" class="btn p-2 flex items-center gap-2 no-underline hover:no-underline">
-              <i data-lucide="message-square-plus" class="w-4 h-4"></i>
+              {{ i "message-square-plus" "w-4 h-4" }}
               <span>comment</span>
           </button>
           {{ if and $isPushAllowed $isOpen }}
@@ -199,29 +193,39 @@
             {{ if $isConflicted }}
               {{ $disabled = "disabled" }}
             {{ end }}
-            <button href="#" class="btn p-2 flex items-center gap-2 no-underline hover:no-underline" {{ $disabled }}>
-                <i data-lucide="git-merge" class="w-4 h-4"></i>
+            <button 
+              hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/merge"
+              hx-swap="none"
+              hx-confirm="Are you sure you want to merge this pull request?"
+              class="btn p-2 flex items-center gap-2" {{ $disabled }}>
+              {{ i "git-merge" "w-4 h-4" }}
                 <span>merge</span>
             </button>
           {{ end }}
 
           {{ if and $isPullAuthor $isOpen }}
           <button href="#" class="btn p-2 flex items-center gap-2 no-underline hover:no-underline">
-              <i data-lucide="rotate-ccw" class="w-4 h-4"></i>
+            {{ i "rotate-ccw" "w-4 h-4" }}
               <span>resubmit</span>
           </button>
           {{ end }}
 
           {{ if and $isPullAuthor $isPushAllowed $isOpen }}
-          <button href="#" class="btn p-2 flex items-center gap-2 no-underline hover:no-underline">
-              <i data-lucide="ban" class="w-4 h-4"></i>
+          <button 
+            hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/close"
+            hx-swap="none"
+            class="btn p-2 flex items-center gap-2">
+            {{ i "ban" "w-4 h-4" }}
               <span>close</span>
           </button>
           {{ end }}
 
           {{ if and $isPullAuthor $isPushAllowed $isClosed }}
-          <button href="#" class="btn p-2 flex items-center gap-2 no-underline hover:no-underline">
-              <i data-lucide="circle-dot" class="w-4 h-4"></i>
+          <button 
+            hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/reopen"
+            hx-swap="none"
+            class="btn p-2 flex items-center gap-2">
+            {{ i "circle-dot" "w-4 h-4" }}
               <span>reopen</span>
           </button>
           {{ end }}
@@ -270,7 +274,7 @@
       class="rounded relative bg-purple-50 border border-purple-200 p-4">
 
       <div class="flex items-center gap-2 text-purple-500">
-          <i data-lucide="git-merge" class="w-4 h-4"></i>
+        {{ i "git-merge" "w-4 h-4" }}
           <span class="font-medium"
               >pull request successfully merged</span
           >
