--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -41,7 +41,7 @@
         <div class="flex justify-between items-center">
             <a href="/{{ $.BaseTreeLink }}/{{ .Name }}" class="{{ $linkstyle }}">
                 <div class="flex items-center gap-2">
-                    <i class="w-3 h-3 fill-current" data-lucide="folder"></i>{{ .Name }}
+                  {{ i "folder" "w-3 h-3 fill-current" }}{{ .Name }}
                 </div>
             </a>
             <time class="text-xs text-gray-500">{{ timeFmt .LastCommit.When }}</time>
@@ -56,7 +56,7 @@
         <div class="flex justify-between items-center">
             <a href="/{{ $.BaseBlobLink }}/{{ .Name }}" class="{{ $linkstyle }}">
                 <div class="flex items-center gap-2">
-                    <i class="w-3 h-3" data-lucide="file"></i>{{ .Name }}
+                  {{ i "file" "w-3 h-3" }}{{ .Name }}
                 </div>
             </a>
             <time class="text-xs text-gray-500">{{ timeFmt .LastCommit.When }}</time>
