--- a/appview/pages/templates/settings.html
+++ b/appview/pages/templates/settings.html
@@ -36,7 +36,7 @@
     <div class="grid grid-cols-[minmax(0,1fr)_auto] items-center gap-4">
       <div class="flex flex-col gap-1">
         <div class="inline-flex items-center gap-4">
-          <i class="w-3 h-3" data-lucide="key"></i>
+          {{ i "key" "w-3 h-3" }}
           <p class="font-bold">{{ .Name }}</p>
         </div>
         <p class="text-sm text-gray-500">added {{ .Created | timeFmt }}</p>
@@ -48,8 +48,8 @@
         class="btn text-red-500 hover:text-red-700"
         title="Delete key"
         hx-delete="/settings/keys?name={{urlquery .Name}}&rkey={{urlquery .Rkey}}&key={{urlquery .Key}}"
-        hx-confirm="Are you sure you wish to delete the key '{{ .Name }}'?">
-        <i class="w-5 h-5" data-lucide="trash-2"></i>
+        hx-confirm="Are you sure you want to delete the key '{{ .Name }}'?">
+        {{ i "trash-2" "w-5 h-5" }}
         <span class="hidden md:inline">delete</span> 
       </button>
     </div>
@@ -91,7 +91,7 @@
     <div class="grid grid-cols-[minmax(0,1fr)_auto] items-center gap-4">
       <div class="flex flex-col gap-2">
         <div class="inline-flex items-center gap-4">
-          <i class="w-3 h-3" data-lucide="mail"></i>
+          {{ i "mail" "w-3 h-3" }}
           <p class="font-bold">{{ .Address }}</p>
           <div class="inline-flex items-center gap-1">
             {{ if .Verified }}
@@ -114,7 +114,7 @@
           hx-swap="none"
           href="#"
           hx-vals='{"email": "{{ .Address }}"}'>
-          <i class="w-5 h-5" data-lucide="rotate-cw"></i>
+          {{ i "rotate-cw" "w-5 h-5" }}
           <span class="hidden md:inline">resend</span> 
         </button>
         {{ end }}
@@ -135,7 +135,7 @@
             class="btn text-red-500 hover:text-red-700"
             title="Delete email"
             type="submit">
-            <i class="w-5 h-5" data-lucide="trash-2"></i>
+            {{ i "trash-2" "w-5 h-5" }}
             <span class="hidden md:inline">delete</span> 
           </button>
         </form>
