--- a/appview/pages/templates/timeline.html
+++ b/appview/pages/templates/timeline.html
@@ -22,7 +22,7 @@
     tangled
   </div>
   <div class="italic text-lg">
-    tightly-knit social coding, <a href="/login" class="underline inline-flex gap-1 items-center">join now <i data-lucide="arrow-right" class="w-4 h-4"></i></a>
+    tightly-knit social coding, <a href="/login" class="underline inline-flex gap-1 items-center">join now {{ i "arrow-right" "w-4 h-4" }}</a>
     <p class="pt-5 px-10 text-sm text-gray-500">Join our IRC channel: <a href="https://web.libera.chat/#tangled"><code>#tangled</code> on Libera Chat</a>.
     Read an introduction to Tangled <a href="https://blog.tangled.sh/intro">here</a>.</p>
   </div>
