--- a/appview/pages/templates/user/profile.html
+++ b/appview/pages/templates/user/profile.html
@@ -62,10 +62,7 @@
 
                     {{ if .RepoStats.StarCount }}
                         <div class="flex gap-1 items-center text-sm">
-                            <span
-                                class="w-3 h-3 fill-current"
-                                data-lucide="star"
-                            ></span>
+                            {{ i "star" "w-3 h-3 fill-current" }}
                             <span>{{ .RepoStats.StarCount }}</span>
                         </div>
                     {{ end }}
@@ -100,10 +97,7 @@
 
                     {{ if .RepoStats.StarCount }}
                         <div class="flex gap-1 items-center text-sm">
-                            <span
-                                class="w-3 h-3 fill-current"
-                                data-lucide="star"
-                            ></span>
+                            {{ i "star" "w-3 h-3 fill-current" }}
                             <span>{{ .RepoStats.StarCount }}</span>
                         </div>
                     {{ end }}
