--- a/input.css
+++ b/input.css
@@ -149,7 +149,7 @@
             @apply py-1 text-red-400;
         }
         .success {
-            @apply py-1 text-green-400;
+            @apply py-1 text-gray-900;
         }
     }
 }
